button is not displayed on start

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,10 @@
 @import "./common";
 @import "./form";
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: auto;
+}
