--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,20 +1,8 @@
 @import "./common";
 @import "./form";
 
-.gallery {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin: auto;
-}
-
-button.load-more {
-  display: none;
-}
-
-.load-more.visible {
-  display: block;
-}
 
 
+// .info img {
+//   margin: auto;
+// }
