--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,7 +2,10 @@
 @import "./form";
 
 
+button.load-more {
+  display: none;
+}
 
-// .info img {
-//   margin: auto;
-// }
+.load-more.visible {
+  display: block;
+}
