--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -21,10 +21,53 @@
 .search-form {
   display: flex;
   justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 button.load-more {
   display: block;
   margin: auto;
   margin-top: 20px;
+  width: 150px;
+  padding: 10px;
+  background: #2196f3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+form .input-search {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 250px;
+  background: #f1f1f1;
+}
+
+form .btn-search {
+  float: left;
+  width: 50px;
+  padding: 10px;
+  background: #2196f3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+}
+
+form .btn-search:hover,
+button.load-more:hover {
+  background: #0b7dda;
+}
+
+form ::after {
+  content: "";
+  clear: both;
+  display: table;
 }
