--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -21,8 +21,12 @@
 .search-form {
   display: flex;
   justify-content: center;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  background-color: rgb(37, 226, 240);
+  position: fixed;
+  width: 100%;
 }
 
 button.load-more {
