--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,19 +1,20 @@
 @import "~node_modules/modern-normalize/modern-normalize.css";
 
+
 .gallery {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
   margin: auto;
+  padding-top: 100px;
 }
 
 .info {
   display: flex;
   justify-content: center;
   gap: 20px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
-//   border: black solid 1px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-top: none;
   border-radius: 5px;
 }
@@ -32,6 +33,5 @@ img {
 .info-item b span {
   font-weight: normal;
   text-align: center;
-
   margin-top: 5px;
 }
