--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -1,23 +1,3 @@
-// .form {
-//   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-//     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-//   line-height: 1.5;
-//   background-color: #fff;
-//   color: #2f2f37;
-//   max-width: 960px;
-//   padding: 16px;
-// }
-
-// .form code {
-//   font-family: monospace;
-//   font-size: 16px;
-//   font-weight: 700;
-//   background-color: #ff6b0a;
-//   color: #fff;
-//   padding: 2px 6px;
-//   border-radius: 2px;
-// }
-
 .search-form {
   display: flex;
   justify-content: center;
@@ -26,6 +6,7 @@
   margin-bottom: 20px;
   background-color: rgb(37, 226, 240);
   position: fixed;
+  z-index: 1;
   width: 100%;
 }
 
