--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -1,6 +1,3 @@
-// body{
-//   background: radial-gradient(circle, #1900ff 0%, #ddee22 100%);;
-// }
 .search-form {
   display: flex;
   justify-content: center;
@@ -19,10 +16,10 @@ button.load-more {
   margin-top: 20px;
   width: 150px;
   padding: 10px;
-  background: #2196f3;
-  color: white;
+  background: radial-gradient(circle, #00ff1e 0%, #fbf807 100%);
+  color: rgb(59, 32, 213);
   font-size: 17px;
-  border: 1px solid grey;
+  border: none;
   border-radius: 10px;
   margin-top: 40px;
   margin-bottom: 40px;
@@ -55,7 +52,9 @@ form .btn-search {
 }
 
 button.load-more:hover {
-  background: #0b7dda;
+  background: radial-gradient(circle, #00ffd5 0%, #fbc607 100%);
+  transition: transform 0.4s;
+  transform: scale(1.1);
 }
 
 form .btn-search:hover {
