--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -13,6 +13,8 @@
 button.load-more {
   display: block;
   margin: auto;
+  cursor: pointer;
+
   margin-top: 20px;
   width: 150px;
   padding: 10px;
